--- a/source/style.scss
+++ b/source/style.scss
@@ -5,70 +5,211 @@ $secondary: #0F98D0;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Open Sans', sans-serif;
 }
 
 .container {
   width: 100%;
   height: 100%;
   position: absolute;
+  background-color: white;
   top: 0;
   left: 0;
 }
 
 .banner {
   height: 80px; 
-  background-color: #909090; 
   position: fixed; 
   top: 0; 
   left: 0;
   width: 100%;
   img {
-    border-radius: 150px;
+    border-radius: 50%;
     background: #909090; 
-    left: 100px; 
+    padding: 22px;
     position: absolute; 
-    top: 0;
-    width: 100px;
+    left: 20%; 
+    top: 16px;
+    width: 130px;
+    height: 130px;
   }
+}
+
+.banner, .banner img {
+  background: $primary;
+  z-index: 2;
 }
 
 .chatbox {
   position: absolute; 
-  top: 80px; 
-  width: 100%; 
-  height: 100%; 
+  top: 150px; 
+  max-width: 450px; 
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  z-index: 1;
+  height: 720px;
+  border-radius: 6px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 5px 30px;
   overflow: auto;
+  .chatbox__header {
+    display: flex;
+    height: 70px;
+    width: 100%;
+    padding: 8px 16px;
+    background-color: $primary;
+    div {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      margin-left: 20px;
+    }
+    h4, p {
+      color: white;
+    }
+    p {
+      line-height: 1rem;
+    }
+    img {
+      position: relative;
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      object-fit: cover;
+    }
+    &:after {
+      content: '';
+      position: absolute;
+      left: 12%;
+      top: 6%;
+      height: 10px;
+      width: 10px;
+      border-radius: 50%;
+      background-color: yellowgreen;
+      border: 3px solid $primary;
+    }
+  }
   .chatbox__container, .chatbox__writing {
-    width: 500px;
+    width: 450px;
     margin: auto;
   }
-  .chatbox__box {
-    height: 200px;
-    p {
-      color: #333; 
+  .chatbox__container {
+    position: absolute;
+    top: 70px;
+    height: 530px;
+    padding: 0 20px;
+    overflow-y: scroll;
+    div.chatbox__box:nth-child(2n) p.chatbox__messages {
+      background: #f5f5f5;
+      color: #000;
     }
-    .chatbox__pictures {
-      float: left;
-      height: 100px;
-    }
-    .chatbox__messages {
-      background: white;
-      width: 400px;
+    .chatbox__box {
+      margin-bottom: 10px;
+      >p {
+        position: relative;
+        left: 50px;
+        text-align: left;
+        margin-bottom: 6px;
+        color: #333; 
+        width: 100%;
+      }
+      .chatbox__content {
+        display: flex;
+      }
+      .chatbox__pictures {
+        float: left;
+        border-radius: 50%;
+        border: 1px solid #f5f5f5;
+        height: 50px;
+      }
+      img.chatbox__pictures:nth-child(2n) {
+        float: right;
+        height: 100px;
+      }
+      .chatbox__messages {
+        position: relative;
+        background: $primary;
+        padding: 15px;
+        border-radius: 8px;
+        border-bottom-right-radius: 0px;
+        color: white;
+        min-width: 40px;
+      }
     }
   }
 }
 
-.chatbox__writing img {
-  height: 50px; 
-  float: left; 
+.chatbox__box:nth-child(2n +1) .chatbox__content {
+  flex-direction: row-reverse;
 }
 
-.chatbox__writing p {
-  background: white; 
-  width: 400px;
+.chatbox__box:nth-child(2n +1) p {
+  text-align: end !important;
+  left: 0 !important;
 }
 
-.chatbox__form form {
-  width: 200px; 
-  margin: auto;
+.chatbox__box:nth-child(2n) .chatbox__messages {
+  border-bottom-left-radius: 0px !important;
+  border-bottom-right-radius: 8px !important;
+}
+
+.chatbox__writing {
+  position: absolute;
+  height: 50px;
+  bottom: 70px;
+  img {
+    position: relative;
+    height: 50px; 
+    float: left; 
+  }
+  p {
+    background: white; 
+    width: 400px;
+  }
+}
+
+.chatbox__form {
+  position: absolute;  
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  text-align: center;
+  form {
+    display: flex;
+    justify-content: center;
+    border-top: 1px solid #dfdfdf;
+
+    input {
+      padding: 20px 20px 20px 30px;
+      width: 100%;
+      border: none;
+      &:focus {
+        outline: none;
+      }
+    }
+    button {
+      position: relative;
+      left: -1px;
+      padding: 10px 12px;
+      background: white;
+      border: none;
+
+      &:hover {
+        cursor: pointer;
+      }
+      &:focus {
+        outline: none;
+      }
+      &:focus > img {
+        transition-duration: transform .6s ease-in-out;
+        transform: rotate(45deg);
+      }
+      img {
+        filter: invert(30%) sepia(12%) saturate(5685%) hue-rotate(144deg) brightness(50%) contrast(80%);
+      }
+    }
+  }
 }
