--- a/source/style.scss
+++ b/source/style.scss
@@ -40,18 +40,39 @@ $secondary: #0F98D0;
   z-index: 2;
 }
 
+@media screen and (min-width: 480px) {
+  .chatbox {
+    max-width: 350px; 
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .chatbox {
+    max-width: 450px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .chatbox {
+    max-width: 1000px;
+  }
+}
+
 .chatbox {
+  opacity: 0;
+  pointer-events: none;
   position: absolute; 
-  top: 150px; 
-  max-width: 450px; 
+  top: 160px; 
   margin-left: auto;
   margin-right: auto;
   left: 0;
   right: 0;
+  bottom: 0;
   z-index: 1;
-  height: 720px;
+  height: 600px;
   border-radius: 6px;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 5px 30px;
+  transition: all .4s cubic-bezier(.69,-0.44,.29,1.27);
   overflow: auto;
   .chatbox__header {
     display: flex;
@@ -91,14 +112,15 @@ $secondary: #0F98D0;
     }
   }
   .chatbox__container, .chatbox__writing {
-    width: 450px;
+    min-width: 350px;
     margin: auto;
   }
   .chatbox__container {
     position: absolute;
     top: 70px;
-    height: 530px;
-    padding: 0 20px;
+    height: 490px;
+    width: 100%;
+    padding: 20px;
     overflow-y: scroll;
     div.chatbox__box:nth-child(2n) p.chatbox__messages {
       background: #f5f5f5;
@@ -181,7 +203,6 @@ $secondary: #0F98D0;
     display: flex;
     justify-content: center;
     border-top: 1px solid #dfdfdf;
-
     input {
       padding: 20px 20px 20px 30px;
       width: 100%;
@@ -212,4 +233,43 @@ $secondary: #0F98D0;
       }
     }
   }
+}
+
+label img {
+  background-color: $primary;
+  border-radius: 50%;
+  padding: 8px;
+  position: absolute;
+  right: 20%;
+  bottom: 12%;
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+  transition: all .3s ease;
+}
+
+label img:nth-child(2n) {
+  opacity: 0;
+  pointer-events: none;
+}
+
+#click {
+  display: none;
+}
+
+#click:checked ~ label img:nth-child(2n) {
+  opacity: 1;
+  pointer-events: auto;
+  transform: rotate(180deg);
+}
+
+#click:checked ~ label img {
+  opacity: 1;
+  pointer-events: auto;
+}
+
+#click:checked ~ .chatbox {
+  opacity: 1;
+  pointer-events: auto;
+  bottom: 85px;
 }
