--- a/source/style.scss
+++ b/source/style.scss
@@ -10,7 +10,7 @@ $secondary: #0F98D0;
 
 .container {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   position: absolute;
   background-color: white;
   top: 0;
@@ -37,7 +37,7 @@ $secondary: #0F98D0;
 
 .banner, .banner img {
   background: $primary;
-  z-index: 2;
+  z-index: 1;
 }
 
 @media screen and (min-width: 480px) {
@@ -46,15 +46,9 @@ $secondary: #0F98D0;
   }
 }
 
-@media screen and (min-width: 768px) {
-  .chatbox {
-    max-width: 450px;
-  }
-}
-
 @media screen and (min-width: 1024px) {
   .chatbox {
-    max-width: 1000px;
+    max-width: 80%;
   }
 }
 
@@ -62,14 +56,13 @@ $secondary: #0F98D0;
   opacity: 0;
   pointer-events: none;
   position: absolute; 
-  top: 160px; 
   margin-left: auto;
   margin-right: auto;
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: 1;
-  height: 600px;
+  z-index: 2;
+  height: 520px;
   border-radius: 6px;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 5px 30px;
   transition: all .4s cubic-bezier(.69,-0.44,.29,1.27);
@@ -81,10 +74,22 @@ $secondary: #0F98D0;
     padding: 8px 16px;
     background-color: $primary;
     div {
+      position: relative;
       display: flex;
       flex-direction: column;
       justify-content: center;
       margin-left: 20px;
+      &:after {
+        content: '';
+        position: absolute;
+        left: -35%;
+        bottom: 11%;
+        height: 10px;
+        width: 10px;
+        border-radius: 50%;
+        background-color: yellowgreen;
+        border: 3px solid $primary;
+      }
     }
     h4, p {
       color: white;
@@ -99,17 +104,6 @@ $secondary: #0F98D0;
       border-radius: 50%;
       object-fit: cover;
     }
-    &:after {
-      content: '';
-      position: absolute;
-      left: 12%;
-      top: 6%;
-      height: 10px;
-      width: 10px;
-      border-radius: 50%;
-      background-color: yellowgreen;
-      border: 3px solid $primary;
-    }
   }
   .chatbox__container, .chatbox__writing {
     min-width: 350px;
@@ -118,9 +112,9 @@ $secondary: #0F98D0;
   .chatbox__container {
     position: absolute;
     top: 70px;
-    height: 490px;
+    height: 410px;
     width: 100%;
-    padding: 20px;
+    padding: 20px 20px 60px 20px;
     overflow-y: scroll;
     div.chatbox__box:nth-child(2n) p.chatbox__messages {
       background: #f5f5f5;
@@ -161,6 +155,18 @@ $secondary: #0F98D0;
     }
   }
 }
+
+// .chatbox .chatbox__header div:after {
+//   content: '';
+//   position: absolute;
+//   left: 12%;
+//   top: 6%;
+//   height: 10px;
+//   width: 10px;
+//   border-radius: 50%;
+//   background-color: yellowgreen;
+//   border: 3px solid $primary;
+// }
 
 .chatbox__box:nth-child(2n +1) .chatbox__content {
   flex-direction: row-reverse;
@@ -240,8 +246,8 @@ label img {
   border-radius: 50%;
   padding: 8px;
   position: absolute;
-  right: 20%;
-  bottom: 12%;
+  right: 10%;
+  bottom: 5%;
   width: 50px;
   height: 50px;
   cursor: pointer;
@@ -271,5 +277,5 @@ label img:nth-child(2n) {
 #click:checked ~ .chatbox {
   opacity: 1;
   pointer-events: auto;
-  bottom: 85px;
+  bottom: 110px;
 }
