--- a/source/style.scss
+++ b/source/style.scss
@@ -42,11 +42,17 @@ $secondary: #0F98D0;
 
 @media screen and (min-width: 480px) {
   .chatbox {
-    max-width: 350px; 
+    max-width: 100%;
   }
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 500px) {
+  .chatbox {
+    max-width: 80%;
+  }
+}
+
+@media screen and (min-width: 768px) {
   .chatbox {
     max-width: 80%;
   }
@@ -62,7 +68,7 @@ $secondary: #0F98D0;
   right: 0;
   bottom: 0;
   z-index: 2;
-  height: 520px;
+  height: 64vh;
   border-radius: 6px;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 5px 30px;
   transition: all .4s cubic-bezier(.69,-0.44,.29,1.27);
