--- a/source/style.scss
+++ b/source/style.scss
@@ -237,7 +237,7 @@ $secondary: #0F98D0;
         outline: none;
       }
       &:focus > img {
-        transition-duration: transform .6s ease-in-out;
+        transition: transform .6s ease-in-out;
         transform: rotate(45deg);
       }
       img {
