--- a/source/style.scss
+++ b/source/style.scss
@@ -162,16 +162,9 @@ $secondary: #0F98D0;
   }
 }
 
-// .chatbox .chatbox__header div:after {
-//   content: '';
-//   position: absolute;
-//   left: 12%;
-//   top: 6%;
-//   height: 10px;
-//   width: 10px;
-//   border-radius: 50%;
-//   background-color: yellowgreen;
-//   border: 3px solid $primary;
+// .chatbox .chatbox__header div:after {content: ''; position: absolute; left:
+//   12%; top: 6%; height: 10px; width: 10px; border-radius: 50%;
+//   background-color: yellowgreen; border: 3px solid $primary;
 // }
 
 .chatbox__box:nth-child(2n +1) .chatbox__content {
