--- a/source/style.scss
+++ b/source/style.scss
@@ -24,8 +24,8 @@ $secondary: #0F98D0;
   left: 0;
   width: 100%;
   img {
+    background: $primary;
     border-radius: 50%;
-    background: #909090; 
     padding: 22px;
     position: absolute; 
     left: 20%; 
@@ -35,18 +35,24 @@ $secondary: #0F98D0;
   }
 }
 
-.banner, .banner img {
-  background: $primary;
+// Les medias queries permettent de rendre le chatbox responsive sur tous supports
+.banner, .chatbox__header {
+  background: rgb(0,102,102);
+  background: -moz-linear-gradient(143deg, rgba(0,102,102,1) 65%, rgba(15,152,208,1) 100%);
+  background: -webkit-linear-gradient(143deg, rgba(0,102,102,1) 65%, rgba(15,152,208,1) 100%);
+  background: linear-gradient(143deg, rgba(0,102,102,1) 65%, rgba(15,152,208,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#006666",endColorstr="#0f98d0",GradientType=1);
   z-index: 1;
 }
 
+// Les medias queries permettent de rendre le chatbox responsive sur tous supports
 @media screen and (min-width: 480px) {
   .chatbox {
     max-width: 100%;
   }
 }
 
-@media screen and (min-width: 500px) {
+@media screen and (min-width: 490px) {
   .chatbox {
     max-width: 80%;
   }
@@ -54,7 +60,19 @@ $secondary: #0F98D0;
 
 @media screen and (min-width: 768px) {
   .chatbox {
-    max-width: 80%;
+    max-width: 70%;
+  }
+  #chatbox-label img {
+    right: 14.8% !important;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .chatbox {
+    max-width: 60%;
+  }
+  #chatbox-label img {
+    right: 20% !important;
   }
 }
 
@@ -74,11 +92,13 @@ $secondary: #0F98D0;
   transition: all .4s cubic-bezier(.69,-0.44,.29,1.27);
   overflow: auto;
   .chatbox__header {
+    position: absolute;
+    top: 0;
+    left: 0;
     display: flex;
     height: 70px;
     width: 100%;
     padding: 8px 16px;
-    background-color: $primary;
     div {
       position: relative;
       display: flex;
@@ -112,15 +132,16 @@ $secondary: #0F98D0;
     }
   }
   .chatbox__container, .chatbox__writing {
-    min-width: 350px;
+    width: 100%;
     margin: auto;
   }
   .chatbox__container {
     position: absolute;
     top: 70px;
-    height: 410px;
+    height: calc(100% - 70px);
     width: 100%;
     padding: 20px 20px 60px 20px;
+    background-color: white;
     overflow-y: scroll;
     div.chatbox__box:nth-child(2n) p.chatbox__messages {
       background: #f5f5f5;
@@ -129,9 +150,8 @@ $secondary: #0F98D0;
     .chatbox__box {
       margin-bottom: 10px;
       >p {
-        position: relative;
-        left: 50px;
         text-align: left;
+        padding: 0 50px;
         margin-bottom: 6px;
         color: #333; 
         width: 100%;
@@ -157,15 +177,11 @@ $secondary: #0F98D0;
         border-bottom-right-radius: 0px;
         color: white;
         min-width: 40px;
+        max-width: 90%;
       }
     }
   }
 }
-
-// .chatbox .chatbox__header div:after {content: ''; position: absolute; left:
-//   12%; top: 6%; height: 10px; width: 10px; border-radius: 50%;
-//   background-color: yellowgreen; border: 3px solid $primary;
-// }
 
 .chatbox__box:nth-child(2n +1) .chatbox__content {
   flex-direction: row-reverse;
@@ -184,7 +200,13 @@ $secondary: #0F98D0;
 .chatbox__writing {
   position: absolute;
   height: 50px;
-  bottom: 70px;
+  bottom: 58px;
+  border-top: 1px solid #dfdfdf;
+  background-color: white;
+  .show {
+    display: flex;
+    align-items: center;
+  }
   img {
     position: relative;
     height: 50px; 
@@ -192,7 +214,7 @@ $secondary: #0F98D0;
   }
   p {
     background: white; 
-    width: 400px;
+    width: 100%;
   }
 }
 
@@ -204,6 +226,7 @@ $secondary: #0F98D0;
   right: 0;
   bottom: 0;
   text-align: center;
+  background-color: white;
   form {
     display: flex;
     justify-content: center;
@@ -230,8 +253,8 @@ $secondary: #0F98D0;
         outline: none;
       }
       &:focus > img {
-        transition: transform .6s ease-in-out;
-        transform: rotate(45deg);
+        transition: transform .3s ease-in-out;
+        transform: scale(.7);
       }
       img {
         filter: invert(30%) sepia(12%) saturate(5685%) hue-rotate(144deg) brightness(50%) contrast(80%);
@@ -240,8 +263,8 @@ $secondary: #0F98D0;
   }
 }
 
-label img {
-  background-color: $primary;
+#chatbox-label img {
+  background: $primary;
   border-radius: 50%;
   padding: 8px;
   position: absolute;
@@ -253,27 +276,27 @@ label img {
   transition: all .3s ease;
 }
 
-label img:nth-child(2n) {
+#chatbox-label img:nth-child(2n) {
   opacity: 0;
   pointer-events: none;
 }
 
-#click {
+#chatbox-toggle {
   display: none;
 }
 
-#click:checked ~ label img:nth-child(2n) {
+#chatbox-toggle:checked ~ #chatbox-label img:nth-child(2n) {
   opacity: 1;
   pointer-events: auto;
   transform: rotate(180deg);
 }
 
-#click:checked ~ label img {
+#chatbox-toggle:checked ~ #chatbox-label img {
   opacity: 1;
   pointer-events: auto;
 }
 
-#click:checked ~ .chatbox {
+#chatbox-toggle:checked ~ .chatbox {
   opacity: 1;
   pointer-events: auto;
   bottom: 110px;
