--- a/source/style.scss
+++ b/source/style.scss
@@ -35,9 +35,12 @@ $secondary: #0F98D0;
   }
 }
 
-// Les medias queries permettent de rendre le chatbox responsive sur tous supports
+// Il y a plusieurs "versions" de background utilisant des préfixes (ex: -moz-
+// pour Mozilla Firefox) afin d'être compatible avec un maximum de navigateurs.
+// Le background: $primary permet d'afficher un background dans le cas où le
+// navigateur ne supporterait pas le gradient.
 .banner, .chatbox__header {
-  background: rgb(0,102,102);
+  background: $primary;
   background: -moz-linear-gradient(143deg, rgba(0,102,102,1) 65%, rgba(15,152,208,1) 100%);
   background: -webkit-linear-gradient(143deg, rgba(0,102,102,1) 65%, rgba(15,152,208,1) 100%);
   background: linear-gradient(143deg, rgba(0,102,102,1) 65%, rgba(15,152,208,1) 100%);
@@ -45,7 +48,8 @@ $secondary: #0F98D0;
   z-index: 1;
 }
 
-// Les medias queries permettent de rendre le chatbox responsive sur tous supports
+// Les medias queries permettent de rendre le chatbox responsive sur tous
+// supports.
 @media screen and (min-width: 480px) {
   .chatbox {
     max-width: 100%;
@@ -151,33 +155,43 @@ $secondary: #0F98D0;
       margin-bottom: 10px;
       >p {
         text-align: left;
-        padding: 0 50px;
+        padding: 0 55px;
         margin-bottom: 6px;
         color: #333; 
         width: 100%;
       }
       .chatbox__content {
         display: flex;
+        &:hover + .chatbox__date {
+          opacity: 1;
+        }
+        .chatbox__pictures {
+          float: left;
+          border-radius: 50%;
+          border: 1px solid #f5f5f5;
+          height: 50px;
+        }
+        img.chatbox__pictures:nth-child(2n) {
+          float: right;
+          height: 100px;
+        }
+        .chatbox__messages {
+          position: relative;
+          background: $primary;
+          padding: 15px;
+          margin: 0 5px;
+          border-radius: 8px;
+          border-bottom-right-radius: 0px;
+          color: white;
+          min-width: 40px;
+          max-width: 90%;
+        }
       }
-      .chatbox__pictures {
-        float: left;
-        border-radius: 50%;
-        border: 1px solid #f5f5f5;
-        height: 50px;
-      }
-      img.chatbox__pictures:nth-child(2n) {
-        float: right;
-        height: 100px;
-      }
-      .chatbox__messages {
-        position: relative;
-        background: $primary;
-        padding: 15px;
-        border-radius: 8px;
-        border-bottom-right-radius: 0px;
-        color: white;
-        min-width: 40px;
-        max-width: 90%;
+      .chatbox__date {
+        opacity: 0;
+        margin-top: 5px;
+        font-size: 12px;
+        color: #8A8D91;
       }
     }
   }
@@ -218,6 +232,7 @@ $secondary: #0F98D0;
   }
 }
 
+// L'option filter ci-dessous permet de changer la couleur d'un svg
 .chatbox__form {
   position: absolute;  
   margin-left: auto;
@@ -254,7 +269,7 @@ $secondary: #0F98D0;
       }
       &:focus > img {
         transition: transform .3s ease-in-out;
-        transform: scale(.7);
+        transform: scale(.8);
       }
       img {
         filter: invert(30%) sepia(12%) saturate(5685%) hue-rotate(144deg) brightness(50%) contrast(80%);
@@ -276,11 +291,14 @@ $secondary: #0F98D0;
   transition: all .3s ease;
 }
 
+// :nth-child() permet de séléctionner une partie des enfants d'un élément
 #chatbox-label img:nth-child(2n) {
   opacity: 0;
   pointer-events: none;
 }
 
+// J'utilise la technique d'un input "invisible", ce qui me permet d'afficher ou
+// cacher le chatbox avec un bouton. Il est également possible de le faire en JS
 #chatbox-toggle {
   display: none;
 }
